# NDI-Audio-Sender_Receiver

./: LICENSE
NDI-Audio-Receiver/: .gitignore  CMakeLists.txt  NDIReceiver.cpp  NDIReceiver.h  main.cpp
NDI-Audio-Sender/: CMakeLists.txt  NDISender.cpp  NDISender.h  main.cpp
